# fl-resource-aware

./: .gitignore  ARTIFACT_APPENDIX.md  README.md  pyproject.toml
archive/tuned_parameter/: pyproject.toml
archive/tuned_parameter/pytorch_example/: server_app.py  strategy.py
baseline/pytorch_example/: strategy.py  task.py
comparison_runs/20260414_225320_first_try/: comparison_report.json  comparison_report.txt
comparison_runs/20260414_232643_second_try/: comparison_report.json  comparison_report.txt
comparison_runs/20260415_115944/: comparison_report.json  comparison_report.md  comparison_report.txt
comparison_runs/20260415_123626_15Apr_plot_test/: comparison_report.json  comparison_report.md
comparison_runs/20260416_174339_compare_with_3/: comparison_report.json  comparison_report.md
comparison_runs/20260416_174910_compare_with_3/: comparison_report.json  comparison_report.md
comparison_runs/20260416_180022_orignial_vs_tuned/: comparison_report.json  comparison_report.md
comparison_runs/20260416_180647_orignial_vs_tuned/: comparison_report.json  comparison_report.md
comparison_runs/20260416_192958_orignial_vs_tuned/: comparison_report.json  comparison_report.md
comparison_runs/20260417_063606_compare_with_3/: comparison_report.json  comparison_report.md
comparison_runs/20260417_064643_original_vs_tuned_smoke/: comparison_report.json  (+1 more)
pytorch_example/: strategy.py
scripts/: compare_final_results.py  compare_results.py  compare_three_results.py  run_and_compare.sh  run_and_compare_three.sh  run_and_report_final.sh  setup_ubuntu_fl.sh
(+6 files in other folders)
