[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-example-tuned-parameter"
version = "1.0.0"
description = "Federated Learning tuned-parameter variant"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "wandb==0.17.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorch_example.server_app:app"
clientapp = "pytorch_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-train = 0.25
fraction-evaluate = 0.5
local-epochs = 1
server-device = "cpu"
# Tuned by best_accuracy search run: 20260416_130256_resource_score_best_accuracy (gamma fixed=0.05)
resource-score-alpha = 0.5230801729894771
resource-score-beta = 0.42691982701052283
resource-score-gamma = 0.05